--- a/trinity.html
+++ b/trinity.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="mystyle.css.txt">
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 
 <title>Trinity University</title>
 </head>
