--- a/programming.html
+++ b/programming.html
@@ -2,8 +2,12 @@
 <html>
 <head>
      <title>My Sketch</title>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.0/processing.min.js"></script>
-void setup () {
+     <script src="processing.min.js"></script>
+</head>
+<body>
+<script type="application/processing">
+
+<void setup () {
   size(500,500);
 }
 void draw () {
@@ -76,14 +80,9 @@ void draw () {
   
   
   
-}
-</head>
-<body>
-<script type="application/processing">
-
-<!--paste your entire processing code here-->
+}>
 
 </script>
-<canvas> </canvas>
+<canvas data-processing-soucrces="SommerFace.pde"> </canvas>
 </body>
 </html>
