--- a/programming.html
+++ b/programming.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-     <title>My Sketch</title>
-     <script src="processing.min.js"></script>
-</head>
+    <head>
+    <title>My Sketch</title>
+     script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.0/  processing.min.js"></script>
+    </head>
 <body>
-<script type="application/processing">
+<h2>Programming With Processing</h2>
+<p>This is my sketch created using the processing programming language.</p>
+
 
 <void setup () {
   size(500,500);
@@ -82,7 +84,8 @@ void draw () {
   
 }>
 
-</script>
-<canvas data-processing-soucrces="SommerFace.pde"> </canvas>
+
+  <canvas data-processing-sources="SommerFace.pde"> </canvas>
+
 </body>
 </html>
