--- a/programming.html
+++ b/programming.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <title>My Sketch</title>
-     script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.0/  processing.min.js"></script>
+     script src="processing.min.js"></script>
     </head>
 <body>
 <h2>Programming With Processing</h2>
