--- a/programming.html
+++ b/programming.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <title>My Sketch</title>
-     script src="processing.min.js"></script>
+     <script src="processing.min.js"></script>
     </head>
 <body>
 <h2>Programming With Processing</h2>
