--- a/programming.html
+++ b/programming.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <title>My Sketch</title>
-     <script src="processing.min.js"></script>
-    </head>
+<head>
+     <title>My Sketch</title>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.0/processing.min.js"></script>
+</head>
 <body>
-<h2>Programming With Processing</h2>
-<p>This is my sketch created using the processing programming language.</p>
+<script type="application/processing">
 
-
-<void setup () {
+<void   () {
   size(500,500);
 }
 void draw () {
@@ -82,10 +80,10 @@ void draw () {
   
   
   
-}>
+}
+>
 
-
-  <canvas data-processing-sources="SommerFace.pde"> </canvas>
-
+</script>
+<canvas> </canvas>
 </body>
 </html>
