--- a/programming.html
+++ b/programming.html
@@ -7,7 +7,7 @@
 <body>
 <script type="application/processing">
 
-void setup () {
+<void setup () {
   size(500,500);
 }
 void draw () {
@@ -78,9 +78,7 @@ void draw () {
     //mouth
   arc(251,365,30,10,90,500);
   
-  
-  
-}
+}>
 
 
 </script>
