--- a/programming.html
+++ b/programming.html
@@ -7,10 +7,10 @@
 <body>
 <script type="application/processing">
 
-<!--void setup () {
+<void () {
   size(500,500);
 }
-void draw () {
+void () {
   background(200,255,200);
   //sun
   fill(255,255,200);
@@ -78,7 +78,7 @@ void draw () {
     //mouth
   arc(251,365,30,10,90,500);
   
-}-->
+}>
 
 
 </script>
