--- a/programming.html
+++ b/programming.html
@@ -7,10 +7,10 @@
 <body>
 <script type="application/processing">
 
-<void () {
+<void setup () {
   size(500,500);
 }
-void () {
+void draw () {
   background(200,255,200);
   //sun
   fill(255,255,200);
