--- a/programming.html
+++ b/programming.html
@@ -9,8 +9,8 @@
 
 <void setup () {
   size(500,500);
-}>
-<void draw () {
+}
+void draw () {
   background(200,255,200);
   //sun
   fill(255,255,200);
@@ -78,7 +78,7 @@
     //mouth
   arc(251,365,30,10,90,500);
   
-}>
+}
 
 
 </script>
