--- a/programming.html
+++ b/programming.html
@@ -7,7 +7,8 @@
 <body>
 <script type="application/processing">
 
-< void setup () {
+< 
+void setup () {
   size(500,500);
 }
 void draw () {
@@ -79,7 +80,7 @@ void draw () {
   arc(251,365,30,10,90,500);
   
 }
-
+>
 
 </script>
 <canvas> </canvas>
